# golangci-lint-linter

./: .codespellrc  .editorconfig  .golangci.yml  .markdownlint-cli2.jsonc  CHANGELOG.md  README.md  RULES.md  _typos.toml  _version.py  go.mod  main.go  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  pr-checks.yml  release-please.yml
.husky/hooks/: pre-commit
commands/: lint.go
docs/playground/: go.mod  index.html  vite.config.ts
docs/playground/src/: App.tsx  YAML.ts  worker.ts
internal/: golangci.go  golangci_test.go  report.go  sliceutils.go
internal/cmd/: lint.go
internal/golangci/: golangci.gen.go
internal/linters/: disabled_linters_with_reason.go  disabled_linters_with_reason_test.go  linter_fields_sorted.go  linters_alphabetical.go  linters_alphabetical_test.go  model.go  settings_alphabetical.go  settings_alphabetical_test.go
linters/: disabled_linters_with_reason.go  disabled_linters_with_reason_test.go  linter_fields_sorted.go  linters_alphabetical.go  linters_alphabetical_test.go  model.go  settings_alphabetical.go  settings_alphabetical_test.go
models/: golangci.go  golangci_test.go  report.go
resources/examples/notvalid/: .golangci.yml
resources/examples/simple/: .golangci.yml  golangci-lint.yml
src/golangci_lint_linter/: __init__.py  analysis.py  errors.py
src/golangci_lint_linter/errors/: errors.py
src/golangci_lint_linter/rules/: __init__.py  alphabetical.py  alphabetical_linters.py  alphabetical_settings.py  disable_linters_reason.py  linters_keys_order.py  linters_sorted_alphabetically.py
tests/: test_golangci-lint-linter.py  test_golangci_lint_linter.py
tests/resources/examples/: simple.yml
tests/resources/examples/real_examples/: funcorder.yml
tests/resources/examples/simple/: .golangci.yml
tests/rules/: test_alphabetical.py  test_alphabetical_linters.py  test_alphabetical_settings.py  test_disable_linters_reason.py  test_linters_key_order.py
web/playground/: Makefile  README.md  eslint.config.js  go.mod  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.mts  wasm_exec.js
web/playground/cmd/golangci-lint-linter/: main.go
web/playground/src/: components.d.ts  golangci-lint-linter.wasm  main.ts
web/playground/src/components/: AppFooter.vue  HelloWorld.vue  LinterScreen.vue  README.md
web/playground/src/layouts/: README.md  default.vue
web/playground/src/pages/: index.vue
web/playground/src/plugins/: vuetify.ts
